[project]
name = "rfsim"
version = "0.1.0"
description = "Python RF simulator"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asteval>=1.0.6",
    "cerberus>=1.3.7",
    "networkx>=3.4.2",
    "numpy>=2.2.4",
    "pint>=0.24.4",
    "pyyaml>=6.0.2",
    "scipy>=1.15.2",
    "sympy>=1.13.3",
]

[dependency-groups]
dev = [
    "pytest-benchmark>=5.1.0",
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
pythonpath = ["."]